js/js.translator/testData/incremental/invalidationWithPL/changeFunctionSignature/lib1/l1.6.kt
fun foo(x: Int = 1) = "${x + 5}"
